--- a/index.html
+++ b/index.html
@@ -9,15 +9,56 @@
   <link rel="stylesheet" href="CSS/estilo.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
+<!-- Modal info sector -->
+<div id="sectorInfoModal" class="sector-modal">
+  <div class="sector-modal-content">
+    <div class="sector-modal-header">
+      <h3 id="sectorModalTitle">Sector</h3>
+      <button class="close-sector-modal" onclick="cerrarModalSector()">×</button>
+    </div>
+
+    <div class="sector-modal-body">
+      <div class="sector-stat">
+        <i class="fas fa-home"></i>
+        <span id="sectorTotalCasas">0 casas</span>
+      </div>
+
+      <div class="sector-house-input">
+        <label for="sectorHouseInput">Número de casa (opcional)</label>
+        <input type="number" id="sectorHouseInput" placeholder="Ej: 12">
+      </div>
+    </div>
+
+    <div class="sector-modal-footer">
+      <button class="btn-secondary" onclick="cerrarModalSector()">Cancelar</button>
+      <button class="btn-primary" onclick="confirmarSectorRuta()">
+        <i class="fas fa-route"></i> Trazar ruta
+      </button>
+    </div>
+  </div>
+</div>
+
+
 <body style="margin: 0; padding: 0; overflow: hidden;">
   <!-- Logo en la esquina superior derecha -->
   <div class="residential-logo">
-    <img src="/image/logo gps.png" alt="Logo GPS Residencial" title="Residencial GPS">
+    <img src="image/logo-gps.png" alt="Logo GPS Residencial" title="Residencial GPS">
   </div>
 
   <!-- Botón de búsqueda flotante -->
   <button class="floating-search-btn" onclick="toggleSearchModal()" title="Buscar sector">
     <i class="fas fa-search"></i>
+  </button>
+
+    <!-- Botón cancelar ruta -->
+  <button 
+    id="cancelRouteBtn"
+    class="floating-cancel-route-btn"
+    onclick="cancelarRuta()"
+    title="Cancelar navegación"
+  >
+    <i class="fas fa-times-circle"></i>
   </button>
 
   <!-- Modal de búsqueda -->
